test/Fail/Issue3188.agda
open import Issue3188.Issue3188a

B : Set
B = Set
