test/Fail/Issue3188.err
Issue3188.agda:4.5-8: error: [UnequalSorts]
Set₁ != Set
when checking that the expression Set has type Set
